change IBUCA to ISUCK, replace Guava dependencies