@@ -1,12 +1,13 @@
 package vn.datm.ibuca.iufpm;
 
 import java.util.ArrayList;
-import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
-import org.eclipse.collections.impl.map.mutable.UnifiedMap;
+import org.eclipse.collections.api.list.MutableList;
+import org.eclipse.collections.api.map.primitive.MutableIntObjectMap;
+import org.eclipse.collections.impl.list.mutable.FastList;
+import org.eclipse.collections.impl.map.mutable.primitive.IntObjectHashMap;
 import vn.datm.ibuca.db.UItem;
 import vn.datm.ibuca.db.UTDatabase;
 import vn.datm.ibuca.util.UItemSet;
@@ -14,19 +15,19 @@ import vn.datm.ibuca.util.UPList;
 
 public abstract class IUFPM {
   protected class LimitedSortedItemSets {
-    private List<UItemSet> sets;
+    private MutableList<UItemSet> sets;
     private final int maximumSize;
     private Comparator<UItemSet> comparator;
 
     public LimitedSortedItemSets(int maximumSize, Comparator<UItemSet> comparator) {
-      this.sets = new ArrayList<>(maximumSize + 1);
+      this.sets = new FastList<>(maximumSize + 1);
       this.comparator = comparator;
       this.maximumSize = maximumSize;
     }
 
-    public void addAll(Collection<UItemSet> c) {
-      sets.addAll(c);
-      Collections.sort(sets, comparator);
+    public void addAll(Iterable<UItemSet> c) {
+      sets.addAllIterable(c);
+      sets.sortThis(comparator);
 
       if (sets.size() > maximumSize) {
         sets.subList(maximumSize, sets.size()).clear();
@@ -34,7 +35,7 @@ public abstract class IUFPM {
     }
 
     public UItemSet getLast() {
-      return sets.get(sets.size() - 1);
+      return sets.getLast();
     }
 
     public void add(UItemSet set) {
@@ -46,7 +47,7 @@ public abstract class IUFPM {
       }
     }
 
-    public List<UItemSet> toList() {
+    public MutableList<UItemSet> toList() {
       return sets;
     }
 
@@ -65,7 +66,7 @@ public abstract class IUFPM {
   protected int currentTid = 0;
   protected double minimumSupport = 0;
 
-  protected Map<Integer, UPList> iUPMap = new UnifiedMap<>();
+  protected MutableIntObjectMap<UPList> iupMap = new IntObjectHashMap<>();
 
   protected IUFPM(int k) {
     this.k = k;
@@ -76,10 +77,10 @@ public abstract class IUFPM {
       for (UItem uItem : transation) {
         int id = uItem.getId();
 
-        if (iUPMap.containsKey(id)) {
-          iUPMap.get(id).addTPPair(currentTid, uItem.getProbability());
+        if (iupMap.containsKey(id)) {
+          iupMap.get(id).addTPPair(currentTid, uItem.getProbability());
         } else {
-          iUPMap.put(id, new UPList(id, currentTid, uItem.getProbability()));
+          iupMap.put(id, new UPList(id, currentTid, uItem.getProbability()));
         }
       }
 
